# CS2-insight-agent

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  PLAYER_GUIDE.md  PLAYER_GUIDE_EN.md  README.md  README_EN.md  THIRD_PARTY_LICENSES.md  build_electron.bat  cs2-insight.config.example.json  debug_demoparser.py  package_portable.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-windows.yml
backend/: requirements.txt
backend/app/: ai_reviewer.py  api_errors.py  cs2_config_backup.py  demo_compat_service.py  demo_db.py  demo_parse_isolation.py  demo_parser.py  demo_playback_compat.py  demo_playback_service.py  demo_watcher.py  desktop_data_migration.py  env_utils.py  file_hash.py  gsi_ready.py  insight_agent.py  llm_compat.py  main.py  montage_db.py  montage_encoder.py  montage_errors.py  (+15 more)
data/: basic.ini  cs2-insight.config.example.json  lite_cut_effect_contract.json  lite_cut_visual_acceptance.json
docs/: developer.md  highlight_tags.md  lite-cut-design.md  lite-cut-schedule.md  perfect-world-demo-compatibility.md
frontend/: DEPLOY_R2.md  backend-auth.cjs  electron-main.cjs  index.html  package-lock.json  package.json  preload.cjs  vite.config.js  vitest.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/windows/: upgrade-hooks.nsh
pov/: gameinfo.gi（修改后）  pov.vpk  pov_de_dust2.vpk  pov_default.vpk  说明.txt
scripts/: github-bootstrap.ps1  litecut_visual_regression.py
(+468 files in other folders)
